--- a/graduation_work/templates/graduation_work/temporary_inputResult.html
+++ b/graduation_work/templates/graduation_work/temporary_inputResult.html
@@ -13,12 +13,13 @@
                 <label for="child_id">아동 ID: </label>
                 <input type="text" id="child_id" name="child_id"><br>
                 <label for="event_type">감지된 행동: </label><br>
-                <input type="radio" id="crying" name="action" value="crying"><label for="crying">울음</label>
-                <input type="radio" id="running" name="action" value="running"><label for="running">달림</label>
-                <input type="radio" id="fallingdown" name="action" value="fallingdown"><label for="fallingdown">넘어짐</label><br>
-                <input type="radio" id="eating" name="action" value="eating"><label for="eating">먹음</label>
-                <input type="radio" id="hitting" name="action" value="hitting"><label for="hitting">맞음</label>
-                <input type="radio" id="bumping" name="action" value="bumping"><label for="bumping">부딪힘</label>
+                <input type="radio" id="standing" name="action" value="standing"><label for="standing">standing</label>
+                <input type="radio" id="walking" name="action" value="walking"><label for="walking">walking</label>
+                <input type="radio" id="running" name="action" value="running"><label for="running">running</label>
+                <input type="radio" id="sitting" name="action" value="sitting"><label for="sitting">sitting</label><br>
+                <input type="radio" id="playing" name="action" value="playing"><label for="playing">playing</label>
+                <input type="radio" id="fighting" name="action" value="fighting"><label for="fighting">fighting</label>
+                <input type="radio" id="falldown" name="action" value="falldown"><label for="falldown">falldown</label>
                 
                 <br>
                 <label for="confidence">인식 신뢰도: </label>
