fix: table 가운데 정렬, 행동감지 기본값 0으로 변경

--- a/graduation_work/templates/graduation_work/parents_page.html
+++ b/graduation_work/templates/graduation_work/parents_page.html
@@ -85,11 +85,12 @@
                         <a href="javascript:closePop();"><img src="{{ MEDIA_URL }}ic_close.png" class="m_header-banner-close" width="30px" height="30px"></a>
                     </div>
                     <div class="popup_cont">
-                        <h2> 알림장 </h2>
+                        <h2> ooo의 알림장 </h2>
+                        
                         <p>아직 알림장이 작성되지 않았습니다😊</p>
                     </div>
                     <div class="popup_cont">
-                        <h3 style="text-align: center; margin-bottom: 15px;"> * 오늘의 행동 감지: 2건</h3>
+                        <h3 style="text-align: center; margin-bottom: 15px;"> * 오늘의 행동 감지: 0건</h3>
                         <!-- 위험 행동 각각의 갯수-->
                         <table id="eventTable" style="border: 1; border-radius: 5px; text-align: center;">
                             <tbody>
