fix: table 가운데 정렬 retry

--- a/graduation_work/templates/graduation_work/parents_page.html
+++ b/graduation_work/templates/graduation_work/parents_page.html
@@ -92,7 +92,7 @@
                     <div class="popup_cont">
                         <h3 style="text-align: center; margin-bottom: 15px;"> * 오늘의 행동 감지: 0건</h3>
                         <!-- 위험 행동 각각의 갯수-->
-                        <table id="eventTable" style="border: 1; border-radius: 5px; text-align: center;">
+                        <table id="eventTable">
                             <tbody>
                                 <tr>
                                     <th>standing</th>
