--- a/static/css/parents_style.css
+++ b/static/css/parents_style.css
@@ -301,6 +301,12 @@ details > summary::-webkit-details-marker {
 /* 팝업 안에 행동 감지 건수 */
 .popup_cont table {
     width: 70%;
+    border: 1px solid #ddd; 
+    border-collapse: collapse;
+    border-radius: 5px;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 15px;
 }
 .popup_cont table tbody tr {
     border-top: 1px solid #e5e5e5;
