--- a/graduation_work/templates/graduation_work/parents_page.html
+++ b/graduation_work/templates/graduation_work/parents_page.html
@@ -129,7 +129,7 @@
                             <div class="box1">
                                 <div class="slide_box1">
                                     <div class="slide_item1">
-                                        <!-- <video
+                                        <video
                                             id="my-video"
                                             class="video-js"
                                             controls preload="auto"
@@ -143,7 +143,7 @@
                                                 web browser that
                                                 <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
                                             </p>
-                                        </video> -->
+                                        </video>
                                     </div>
                                     <div class="slide_item1">
                                         <img src="{{ MEDIA_URL }}angry.png" alt="2">
