--- a/static/css/parents_style.css
+++ b/static/css/parents_style.css
@@ -306,7 +306,8 @@ details > summary::-webkit-details-marker {
     border-radius: 5px;
     text-align: center;
     margin: 0 auto;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
+    font-size: 15px;
 }
 .popup_cont table tbody tr {
     border-top: 1px solid #e5e5e5;
