--- a/graduation_work/templates/graduation_work/parents_page.html
+++ b/graduation_work/templates/graduation_work/parents_page.html
@@ -90,7 +90,7 @@
                         <p>아직 알림장이 작성되지 않았습니다😊</p>
                     </div>
                     <div class="popup_cont">
-                        <h3 style="text-align: center; margin-bottom: 15px;"> * 오늘의 행동 감지: 0건</h3>
+                        <h3 style="text-align: center; margin-bottom: 15px;" id="totalRes"> * 오늘의 행동 감지: 0건</h3>
                         <!-- 위험 행동 각각의 갯수-->
                         <table id="eventTable">
                             <tbody>
