add: 탈퇴하기 추가

--- a/graduation_work/templates/graduation_work/parents_page.html
+++ b/graduation_work/templates/graduation_work/parents_page.html
@@ -236,7 +236,17 @@
             </section>
             <nav class="header-nav">
                 <ul>
-                    <li><a href="{% url 'logout' %}">로그아웃</a></li>
+                    <li><a href="{% url 'logout' %}">로그아웃</a></li><br>
+                    <!-- 탈퇴하기 팝업 띄운 뒤 확인 누르면 탈퇴되기 -->
+                    <li style="color: rgb(116, 116, 116);">
+                        <a href="#" onclick="if(confirm('정말 탈퇴하시겠습니까?')) { document.getElementById('withdrawalForm').submit(); } return false;">
+                        탈퇴하기
+                        </a>
+                    </li>
+
+                    <form id="withdrawalForm" method="POST" action="{% url 'withdrawalUser' %}" style="display:none;">
+                        {% csrf_token %}
+                    </form>
                 </ul>
             </nav>
         </main>
