fix: 탈퇴할 때 유저 컬렉션 뿐만 아니라 다른 연결된 컬렉션도 모두 삭제 해보기 테스트~

--- a/graduation_work/templates/graduation_work/parents_page.html
+++ b/graduation_work/templates/graduation_work/parents_page.html
@@ -244,7 +244,7 @@
                         </a>
                     </li>
 
-                    <form id="withdrawalForm" method="POST" action="{% url 'withdrawalUser' %}" style="display:none;">
+                    <form id="withdrawalForm" method="POST" action="{% url 'withdrawalUser' parents.name parents.id %}" style="display:none;">
                         {% csrf_token %}
                     </form>
                 </ul>
