--- a/graduation_work/templates/graduation_work/createId_page.html
+++ b/graduation_work/templates/graduation_work/createId_page.html
@@ -31,6 +31,7 @@
             <div class="create-box">
                 <h2 style="text-align: center; margin-bottom: 10px;">회원가입</h2>
                 <form method="POST" action="{% url 'add_users' %}">
+                    {% csrf_token %}
                     <div class="select" style="margin-left: 15px;">
                         <input type="radio" name="role" id="teacher" value="teacher"><label for="teacher" class="select-label">선생님</label>
                         <input type="radio" name="role" id="parent" value="parent"><label for="parent" class="select-label">학부모</label>
