--- a/graduation_work/templates/graduation_work/teachers_page.html
+++ b/graduation_work/templates/graduation_work/teachers_page.html
@@ -40,7 +40,13 @@
             <div class="logo-area">
                 <a href=".">    <!-- 이미지 누르면 새로고침 되는.. -->
                     <img src="{{ MEDIA_URL }}webLogo.png" alt="로고" class="logo-img"></a>
-                <h1 style="font-size: 32px; padding-left: 15px;">{{ classroom }}🎈  {{ name }} 선생님, 반갑습니다!</h1>
+                <h1 style="font-size: 32px; padding-left: 15px;">
+                    {{ classroom }}
+                    {% if classroom == "사자반" %} 🦁
+                    {% elif classroom == "호랑이반" %} 🐯
+                    {% else %} 🐻
+                    {% endif %}
+                    {{ name }} 선생님, 반갑습니다!</h1>
             </div>
             <nav class="header-nav">
                 <ul>
