fix: 회원탈퇴 버튼 추가/ 수정

--- a/graduation_work/templates/graduation_work/parents_page.html
+++ b/graduation_work/templates/graduation_work/parents_page.html
@@ -240,7 +240,7 @@
                     <!-- 탈퇴하기 팝업 띄운 뒤 확인 누르면 탈퇴되기 -->
                     <li style="color: rgb(116, 116, 116); font-size: 12px;">
                         <a href="#" onclick="if(confirm('정말 탈퇴하시겠습니까?')) { document.getElementById('withdrawalForm').submit(); } return false;">
-                        탈퇴하기
+                        회원탈퇴
                         </a>
                     </li>
 
