fix: 넘겨주는 변수(?) 수정정

--- a/graduation_work/templates/graduation_work/teachers_page.html
+++ b/graduation_work/templates/graduation_work/teachers_page.html
@@ -57,7 +57,7 @@
                         </a>
                     </li>
 
-                    <form id="withdrawalForm" method="POST" action="{% url 'withdrawalUser' parents.name %}" style="display:none;">
+                    <form id="withdrawalForm" method="POST" action="{% url 'withdrawalUser' name %}" style="display:none;">
                         {% csrf_token %}
                     </form>
                 </ul>
