--- a/static/css/teachers_style.css
+++ b/static/css/teachers_style.css
@@ -276,3 +276,41 @@ td:nth-child(3) {
 .list-comment-btn:hover {
     background-color: #dbcd07;
 }
+
+/* 펼쳐지는 글글 */
+.accordion {
+    background-color: #ffffff;
+    cursor: pointer;
+    padding: 16px;
+    width: 100%;
+    outline: none;
+    border: none;
+    text-align: left;
+    font-size: 16px;
+    transition: 0.4s;
+}
+ 
+.active, .accordion:hover {
+    background-color: #f5f5f5;
+    font-weight: bold;
+}
+
+.accordion:after {
+    content: '\002B';
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+}
+
+.active:after {
+    content: "\2212";
+}
+
+.panel {
+    padding: 0 16px;
+    background-color: #ffffff;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    border-bottom: 1px solid #eeeeee;
+}
