--- a/graduation_work/templates/graduation_work/teachers_page.html
+++ b/graduation_work/templates/graduation_work/teachers_page.html
@@ -91,7 +91,7 @@
                 </div>
                 {% endif %}
                 <!-- 오른쪽 폼(개인 알림장) -->
-                <div class="form-box" id="formArea" style="display: none;">
+                <div class="form-box" id="formArea">
                     <div class="form-content">
                         <button class="x-btn" onclick="closeForm()">X</button>
                         <h3 style="padding: 15px; padding-top: 25px;">ooo의 알림장 내용 작성</h3>
@@ -105,7 +105,7 @@
                 </div>
 
                 <!-- 오른쪽 폼(알림장 로그들) -->
-                <div class="form-box" id="formAreaLog" style="display: none;">
+                <div class="form-box" id="formAreaLog">
                     <div class="form-content">
                         <button class="x-btn" onclick="closeForm()">X</button>
                         <h3 style="padding: 15px; padding-top: 25px;">알림장 로그</h3>
