fix: 아이고 이거 어케 고치남남

--- a/graduation_work/templates/graduation_work/teachers_page.html
+++ b/graduation_work/templates/graduation_work/teachers_page.html
@@ -75,7 +75,7 @@
                             <tr>
                                 <th>이름</th>
                                 <th>나이</th>
-                                <th><button class="list-comment-btn" onclick="javascript:openLogForm('{{ teachers.id }}')">알림장 로그</button></th>
+                                <th><button class="list-comment-btn" onclick="javascript:openLogForm('{{ teachers.id }}')" style="margin-left: 6px;">알림장 로그</button></th>
                             </tr>
                         </thead>
                         <tbody>
