fix: 제발 좀 되라라

--- a/static/css/teachers_style.css
+++ b/static/css/teachers_style.css
@@ -277,7 +277,7 @@ td:nth-child(3) {
     background-color: #dbcd07;
 }
 
-/* 펼쳐지는 글글 */
+/* 펼쳐지는 글 */
 .accordion {
     background-color: #ffffff;
     cursor: pointer;
