--- a/graduation_work/templates/graduation_work/teachers_page.html
+++ b/graduation_work/templates/graduation_work/teachers_page.html
@@ -105,13 +105,13 @@
                 </div>
 
                 <!-- 오른쪽 폼(알림장 로그들) -->
-                <div class="form-box" id="formAreaLog">
+                {% comment %} <div class="form-box" id="formAreaLog">
                     <div class="form-content">
                         <button class="x-btn" onclick="closeForm()">X</button>
                         <h3 style="padding: 15px; padding-top: 25px;">알림장 로그</h3>
                         <!-- 여기에 JS로 로그 내용 추가됨 -->
                     </div>
-                </div>
+                </div> {% endcomment %}
             </div>
         </section>
     </main>
