--- a/graduation_work/templates/graduation_work/teachers_page.html
+++ b/graduation_work/templates/graduation_work/teachers_page.html
@@ -75,7 +75,7 @@
                             <tr>
                                 <th>이름</th>
                                 <th>나이</th>
-                                <th><button class="list-comment-btn" onclick="javascript:openLogForm('{{ teachers.id }}')" style="margin-left: 10px;">알림장 로그</button></th>
+                                <th>&nbsp;</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -93,7 +93,7 @@
                 <!-- 오른쪽 폼(개인 알림장) -->
                 <div class="form-box" id="formArea">
                     <div class="form-content">
-                        <button class="x-btn" onclick="closeForm()">X</button>
+                        {% comment %} <button class="x-btn" onclick="closeForm()">X</button> {% endcomment %}
                         <h3 style="padding: 15px; padding-top: 25px;">ooo의 알림장 내용 작성</h3>
                         <form id="writeNotice" method="POST">
                             {% csrf_token %}
