--- a/graduation_work/templates/graduation_work/teachers_page.html
+++ b/graduation_work/templates/graduation_work/teachers_page.html
@@ -94,7 +94,7 @@
                 <div class="form-box" id="formArea">
                     <div class="form-content">
                         {% comment %} <button class="x-btn" onclick="closeForm()">X</button> {% endcomment %}
-                        <h3 style="padding: 15px; padding-top: 25px;">작성하기 전 옆 알림장 버튼을 먼저 눌러주세요</h3>
+                        <h3 style="padding: 15px; padding-top: 25px;">알림장 버튼을 먼저 눌러주세요</h3>
                         <form id="writeNotice" method="POST">
                             {% csrf_token %}
                             <textarea id="noticeContent" name="content" placeholder="전달할 내용:&#13;&#10;&#13;&#10;&#13;&#10;&#13;&#10;&#13;&#10;*준비물:"></textarea>
