--- a/static/css/teachers_style.css
+++ b/static/css/teachers_style.css
@@ -103,6 +103,7 @@ body {
     border-radius: 15px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     overflow-y: auto; /* 내용이 길면 스크롤 */
+    height: 100%;  /* 부모 요소와 비슷한 크기로 */
 }
 
 .form-box {
