--- a/graduation_work/templates/graduation_work/createId_page.html
+++ b/graduation_work/templates/graduation_work/createId_page.html
@@ -52,9 +52,9 @@
                     <div id="teacher-field" class="role-fields">
                         <label for="classroom">담당 반 (classroom)<p>*</p></label>
                         <select id="classroom" name="classroom">
-                            <option name="classroom" value="사자반">사자반</option>
-                            <option name="classroom" value="호랑이반">호랑이반</option>
-                            <option name="classroom" value="곰반">곰반</option>
+                            <option name="classroom" value="lion">사자반</option>
+                            <option name="classroom" value="tiger">호랑이반</option>
+                            <option name="classroom" value="bear">곰반</option>
                         </select>
                     </div>
                     <br>
