--- a/graduation_work/templates/graduation_work/parents_page.html
+++ b/graduation_work/templates/graduation_work/parents_page.html
@@ -174,9 +174,9 @@
                             <label for="birthdate" class="childLabel">자녀 생년월일 (birthday): <input type="date" name="birthdate" class="childInput" placeholder="Enter your child's birthday *" required></label>
                             <label for="classroom" class="childLabel">자녀 소속 반 (classroom): 
                                 <select id="classroom" name="classroom">
-                                    <option name="classroom" value="사자반">사자반</option>
-                                    <option name="classroom" value="호랑이반">호랑이반</option>
-                                    <option name="classroom" value="곰반">곰반</option>
+                                    <option name="classroom" value="lion">사자반</option>
+                                    <option name="classroom" value="tiger">호랑이반</option>
+                                    <option name="classroom" value="bear">곰반</option>
                                 </select>
                             </label><br>
                             <button type="submit" class="submit-btn">추가</button>
@@ -213,9 +213,9 @@
                                     <label for="birthdate" class="childLabel">자녀 생년월일 (birthday): <input type="date" name="birthdate" class="childInput" placeholder="Enter your child's birthday *" required></label>
                                     <label for="classroom" class="childLabel">자녀 소속 반 (classroom): 
                                         <select id="classroom" name="classroom">
-                                            <option name="classroom" value="사자반">사자반</option>
-                                            <option name="classroom" value="호랑이반">호랑이반</option>
-                                            <option name="classroom" value="곰반">곰반</option>
+                                            <option name="classroom" value="lion">사자반</option>
+                                            <option name="classroom" value="tiger">호랑이반</option>
+                                            <option name="classroom" value="bear">곰반</option>
                                         </select>
                                     </label><br>
                                     <button type="submit" class="submit-btn">추가</button>
