--- a/graduation_work/templates/graduation_work/teachers_page.html
+++ b/graduation_work/templates/graduation_work/teachers_page.html
@@ -37,12 +37,12 @@
                 <a href=".">    <!-- 이미지 누르면 새로고침 되는.. -->
                     <img src="{{ MEDIA_URL }}webLogo.png" alt="로고" class="logo-img"></a>
                 <h1 style="font-size: 32px; padding-left: 15px;">
-                    {{ teachers.classroom }}
-                    {% if teachers.classroom == "사자반" %}🦁
-                    {% elif teachers.classroom == "호랑이반" %}🐯
-                    {% else %}🐻
+                    {% if teachers.classroom == "lion" %}사자반🦁
+                    {% elif teachers.classroom == "tiger" %}호랑이반🐯
+                    {% else %}곰반🐻
                     {% endif %}
-                    {{ teachers.name }} 선생님, 반갑습니다!</h1>
+                    {%{{ teachers.name }} %}
+                    선생님, 반갑습니다!</h1>
             </div>
             <nav class="header-nav">
                 <ul>
