fix: 오타랑 회원가입에 뭐 추가

--- a/graduation_work/templates/graduation_work/teachers_page.html
+++ b/graduation_work/templates/graduation_work/teachers_page.html
@@ -41,7 +41,7 @@
                     {% elif teachers.classroom == "tiger" %}호랑이반🐯
                     {% else %}곰반🐻
                     {% endif %}
-                    {%{{ teachers.name }} %}
+                    {{ teachers.name }}
                     선생님, 반갑습니다!</h1>
             </div>
             <nav class="header-nav">
