--- a/graduation_work/templates/graduation_work/createId_page.html
+++ b/graduation_work/templates/graduation_work/createId_page.html
@@ -22,6 +22,11 @@
 <body>
     {% block asd %}
     {% endblock %}
+    {% if messages %}
+    <script>
+        alert("이미 존재하는 아이디입니다.");
+    </script>
+    {% endif %}
     <script src="{% static 'js/register.js' %}"></script>
     <main class="main-container">
         <section class="create-container">
