--- a/graduation_work/templates/graduation_work/createId_page.html
+++ b/graduation_work/templates/graduation_work/createId_page.html
@@ -64,9 +64,11 @@
         </section>
     </main>
     {% if messages %}
-    <script>
-        alert("이미 존재하는 아이디입니다.");
-    </script>
+        {% for message in messages %}
+            <script>
+                alert("{{ message }}");
+            </script>
+        {% endfor %}
     {% endif %}
 </body>
 </html>
