--- a/graduation_work/templates/graduation_work/parents_page.html
+++ b/graduation_work/templates/graduation_work/parents_page.html
@@ -40,11 +40,10 @@
             <div class="popup_layer" id="today_popup_layer" style="display: none;">
                 <div class="popup_box">
                     <div style="height: 10px; width: 375px; float: top;">
-                        <a href="javascript:closeTodayPop();"><img src="{{ MEDIA_URL }}ic_close.png" class="m_header-banner-close" width="30px" height="30px"></a>
+                        <a href="javascript:closeTodayPop();"><img src="{{ MEDIA_URL }}ic_close.png" class="m_header-banner-close" width="50px" height="50px"></a>
                     </div>
                     <div class="popup_cont">
-                        <h2 style="text-align: center;"> 오늘의 하루 </h2>
-                        <h3 class="child-name">-------ooo 어린이-------</h3>
+                        <h2 style="text-align: center;"> ooo의 하루 </h2>
                         <div class="wrap" id="wrap">
                             <div class="prev"><img src="{{ MEDIA_URL }}prev.png"></div>
                             <div class="box">
