main 태그가 사라졋었네 ㅋㅋㅋㅋㅋ

--- a/graduation_work/templates/graduation_work/teachers_page.html
+++ b/graduation_work/templates/graduation_work/teachers_page.html
@@ -31,7 +31,7 @@
     {% block asd %}
     {% endblock %}
     <!-- 메인 영역 -->
-    < class="main-container">
+    <main class="main-container">
         <header class="site-header">
             <div class="logo-area">
                 <a href=".">    <!-- 이미지 누르면 새로고침 되는.. -->
@@ -109,7 +109,8 @@
                     </div>
                 </div> {% endcomment %}
             </div>
-            
+        </section>
+        <section class="result-container" id="resultContainer">
             <div class="result-box">
                 안녕
             </div>
