파이차트 제발

--- a/graduation_work/templates/graduation_work/teachers_page.html
+++ b/graduation_work/templates/graduation_work/teachers_page.html
@@ -112,7 +112,7 @@
         </section>
         <section class="result-container" id="resultContainer">
             <div class="result-box">
-                안녕
+                <canvas id="doughnut-chart" width="700" height="450"></canvas>
             </div>
         </section>
     </main>
