도넛 차트였네 ㅎㅎ

--- a/graduation_work/templates/graduation_work/teachers_page.html
+++ b/graduation_work/templates/graduation_work/teachers_page.html
@@ -30,6 +30,7 @@
 <body>
     {% block asd %}
     {% endblock %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <!-- 메인 영역 -->
     <main class="main-container">
         <header class="site-header">
