--- a/graduation_work/templates/graduation_work/teachers_page.html
+++ b/graduation_work/templates/graduation_work/teachers_page.html
@@ -113,7 +113,9 @@
         </section>
         <section class="result-container" id="resultContainer">
             <div class="result-box">
-                <canvas id="doughnut-chart" width="400" height="250"></canvas>
+                <div class="doughnut-box">
+                    <canvas id="doughnut-chart" width="400" height="250"></canvas>
+                </div>
             </div>
         </section>
     </main>
